--- a/mymoney.html
+++ b/mymoney.html
@@ -32,6 +32,14 @@
   {{> Nav}}
 
   <h1>Accounts</h1>
+  {{> showAccounts}}
+
+  {{#if showSelectedUser}}
+  <h2>Selected User: {{showSelectedUser.userName}}</h2>
+  <input type="button" class="btn btn-success credit" value="Credit">
+  <input type="button" class="btn btn-danger debit" value="Debit">
+  {{/if}}
+
 </template>
 
 <template name="Profile">
@@ -40,6 +48,15 @@
   <h1>User Profile</h1>
 </template>
 
+<template name="About">
+  {{> Nav}}
+
+  <h1>My Money</h1>
+  <p>This application was created to enable parents to keep track of the allowance owed to each of their children.</p>
+  <p>And to help children learn how to manage their money wisely.</p>
+</template>
+
+<!-- Templates for the Settings pages -->
 <template name="Allocations">
   {{> Nav}}
 
@@ -56,14 +73,58 @@
   {{> Nav}}
 
   <h1>Administrative Settings</h1>
+
+  {{> addChild}}
+
+  <h3>List of accounts</h3>
+  {{> showAccounts}}
 </template>
 
-<template name="About">
-  {{> Nav}}
+<template name="showAccounts">
+  <ul>
+  {{#each user}}
+    <li class="user {{selectedUser}}">{{userName}} - {{type}} account Balance: {{balance}}
+      <button class="remove">&times;</button>
+    </li>
+  {{/each}}
+  </ul>
+</template>
 
-  <h1>My Money</h1>
-  <p>This application was created to enable parents to keep track of the allowance owed to each of their children.</p>
-  <p>And to help children learn how to manage their money wisely.</p>
+<template name="addChild">
+
+  <button>Click Me</button>
+  <p>You've pressed the button {{counter}} times.</p>
+
+  <div class="container">
+
+    <h2>Add child</h2>
+    <p>Name and password will be used by user to log in</p>
+    <form class="form-horizontal" role="form">
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="name">Name:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="name" name="userName" placeholder="FirstName">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="password">Password:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="password" name="userPassword" placeholder="Password">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="balance">Initial Balance:</label>
+        <div class="col-sm-10">
+          <input type="number" class="form-control" id="balance" name="userBalance" placeholder="0">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" class="btn btn-primary">Add Child</button>
+        </div>
+      </div>
+    </form>
+  </div>
 </template>
 
 <template name="Nav">
