--- a/mymoney.html
+++ b/mymoney.html
@@ -34,24 +34,63 @@
     <div class="container">
       <h1>My Money</h1>
       <p>Keeping track of allowance and expenses.</p>
-      <a href="{{pathFor 'admin'}}">Configure Accounts</a>
+      <a href="{{pathFor 'quicksetup'}}">Quick Setup</a>
     </div>
   </div>
 
 </template>
 
-<template name="Accounts">
+<template name="QuickSetup">
   {{> Nav}}
 
-  <h1>Accounts</h1>
-  {{> showAccounts}}
+  <h1>Quick Setup</h1>
+  <div class="container">
 
-  {{#if showSelectedUser}}
-    <h2>Selected User: {{showSelectedUser.userName}}</h2>
-    {{> creditDebit}}
+    <h2>Bank</h2>
+    <form class="form-horizontal" role="form" method="post">
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="bank">Name of Virtual Bank:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="bank" name="bank" placeholder="Bank">
+        </div>
+      </div>
 
-    {{> transactions}}
-  {{/if}}
+      <h2>Administrator(s)</h2>
+      <p>Names and password (default is 123456) will be used by user to log in (users can then change their password).</p>
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="admins">Names (separate by commas):</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="admins" name="admins" placeholder="Admin1, Admin2">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="adminPassword">Password:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="adminPassword" name="adminPassword" placeholder="Administrator">
+        </div>
+      </div>
+
+      <h2>Children</h2>
+      <p>Names and password (default is 123456) will be used by user to log in (users can then change their password).</p>
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="children">Names (separate by commas):</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="children" name="children" placeholder="Child1, Child2">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="password">Password:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="password" name="defaultPassword" placeholder="123456">
+        </div>
+      </div>
+
+      <h2>Accounts</h2>
+      <p>Giving, Saving, and Spending accounts will be created by default.</p>
+      <button type="submit" class="btn btn-primary">Setup</button>
+    </form>
+  </div>
+
 
 </template>
 
@@ -94,12 +133,27 @@
   {{> showAccounts}}
 </template>
 
+<template name="Accounts">
+  {{> Nav}}
+
+  <h1>Accounts</h1>
+  {{> showAccounts}}
+
+  {{#if showSelectedUser}}
+    <h2>Selected User: {{userName}}</h2>
+    {{> creditDebit}}
+
+    {{> transactions}}
+  {{/if}}
+
+</template>
+
 <template name="showAccounts">
   <ul>
-  {{#each user}}
-    <li class="user {{selectedUser}}">
+  {{#each account}}
+    <li class="account {{selectedAccount}}">
       {{#if onAdminPage}}<button class="remove btn btn-danger">Remove</button>{{/if}}
-      {{userName}}: <strong>{{type}}</strong> Balance=${{userBalance}}
+      {{userName}} ({{user_id}}): <strong>{{type}}</strong> Balance=${{userBalance}}
     </li>
   {{/each}}
   </ul>
@@ -244,9 +298,10 @@
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Settings <span class="caret"></span></a>
             <ul class="dropdown-menu">
+              <li><a href="{{pathFor 'admin'}}">Admin Settings</a></li>
+              <li><a href="{{pathFor 'quicksetup'}}">Quick Setup</a></li>
               <li><a href="{{pathFor 'allocations'}}">Allocations</a></li>
               <li><a href="{{pathFor 'recurring'}}">Recurring Transactions</a></li>
-              <li><a href="{{pathFor 'admin'}}">Admin Settings</a></li>
             </ul>
           </li>
         </ul>
