--- a/mymoney.html
+++ b/mymoney.html
@@ -66,7 +66,7 @@
       <div class="form-group">
         <label class="control-label col-sm-2" for="adminPassword">Password:</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="adminPassword" name="adminPassword" placeholder="Administrator">
+          <input type="text" class="form-control" id="adminPassword" name="adminPassword" placeholder="123456">
         </div>
       </div>
 
